k8s/gateway-class-mc.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gke-l7-global-external-managed-mc
spec:
  controllerName: networking.gke.io/gateway
