k8s/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-lb
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: demo-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
